--- a/configs/methods/classic_sd_fi.yaml
+++ b/configs/methods/classic_sd_fi.yaml
@@ -1,5 +1,5 @@
 # Classic tree-SD example
-method: classic_sd
+method: classic_sd_fi
 
 llm_path: meta-llama/Llama-3.1-8B-Instruct
 draft_model_path: meta-llama/Llama-3.2-1B-Instruct
